[metadata]
name = connection-helper
version = 0.9.5
author = smeisegeier
author_email = dexterDSD@googlemail.com
description = A collection of helper for sql connections
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smeisegeier/connection-helper
project_urls =
    Documentation   = https://github.com/smeisegeier/connection-helper
    Source Code     = https://github.com/smeisegeier/connection-helper
    Bug Tracker     = https://github.com/smeisegeier/connection-helper/issues
classifiers = 
    # License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
install_requires =
    pandas >= 2.0.0
    sqlalchemy >= 2.0.28
    sqlalchemy-utils >= 0.41.2
    python-gnupg >= 0.5.2
    duckdb >= 1.0.0
    numpy < 2.0.0
    pyodbc >= 5.1.0
    python_dotenv >= 1.0.1

[options.extras_require]
sec =
    infisical-python>=2.2.3
    bitwarden-sdk